--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Consulta Lines</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="/">Consulta Lines</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -14,24 +14,14 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#"
-          >Home <span class="sr-only">(current)</span></a
-        >
-      </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"
+        <a class="nav-link" href="/linhas-onibus"
           >ônibus<span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"
+        <a class="nav-link" href="/linhas-lotacao"
           >Lotação <span class="sr-only">(current)</span></a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"
-          >Itinerário <span class="sr-only">(current)</span></a
         >
       </li>
     </ul>
