--- a/src/app/onibus/onibus.component.html
+++ b/src/app/onibus/onibus.component.html
@@ -1,23 +1,26 @@
-<h1>Linhas de ônibus</h1>
+<app-home></app-home>
+<h1 class="titulo">Linhas de ônibus</h1>
 <div class="container row">
-    <div class="col-md-12">
-        <div class="table-responsive">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Código</th>
-                        <th>Nome</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let linha of linhasOnibus">
-                        <td>{{linha.id}}</td>
-                        <td>{{linha.codigo}}</td>
-                        <td>{{linha.nome}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+    <div class="col-md-7 dados">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Código</th>
+                    <th>Nome</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let linha of linhasOnibus">
+                    <td>{{linha.id}}</td>
+                    <td>{{linha.codigo}}</td>
+                    <td>{{linha.nome}}</td>
+                    <td><button class="btn btn-primary" (click)="viewItinerario(linha.id)">Itinerário</button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-md-5">
+        <app-itinerario *ngIf="action === 'view'" [linhaOnibus]="selectedOnibus" (newItinerarioEscolhidoEvent)="refreshData()"></app-itinerario>
     </div>
 </div>
