--- a/src/app/lotacao/lotacao.component.html
+++ b/src/app/lotacao/lotacao.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 <h1 class="titulo">Linhas de Lotação</h1>
 <div class="row">
-    <div class="col-md-6 dados">
+    <div class="col-md-9 dados">
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
@@ -10,11 +10,11 @@
                         <th>ID</th>
                         <th>Código</th>
                         <th>Nome</th>
-                        <th></th>
+                        <th><input type="text" class="form-control mr-sm-2" placeholder="Pesquisar" aria-label="Search" name="search" [(ngModel)]="search" /></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let linha of linhasLotacao">
+                    <tr *ngFor="let linha of linhasLotacao | search:search">
                         <td>{{linha.id}}</td>
                         <td>{{linha.codigo}}</td>
                         <td>{{linha.nome}}</td>
@@ -24,7 +24,7 @@
             </table>
         </div>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-3">
         <app-itinerario *ngIf="action === 'view'" [linhaLotacao]="selectedLotacao" (newItinerarioEscolhidoEvent)="refreshData()"></app-itinerario>
     </div>
 </div>
