--- a/src/app/lotacao/lotacao.component.html
+++ b/src/app/lotacao/lotacao.component.html
@@ -1,4 +1,4 @@
-<app-home></app-home>
+<app-nav-bar></app-nav-bar>
 <div class="container-fluid">
 <h1 class="titulo">Linhas de Lotação</h1>
 <div class="row">
